--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <br />367 Panama St.
 <br />Stanford, CA 94305, USA
 <br />Email: tmwang [at] stanford [dot] edu
-<br />[<a href="https://scholar.google.com/citations?user=lAtfkZwAAAAJ%26hl=en">Google Scholar</a>][<a href="pdf/wang.pdf">Curriculem Vitae</a>]<br />
+<br />[<a href="https://scholar.google.com/citations?user=lAtfkZwAAAAJ&hl=en">Google Scholar</a>][<a href="pdf/wang.pdf">Curriculem Vitae</a>]<br />
 <br />I am a Ph.D. candidate in Earth System Science at Stanford Univetsity advised by Professor <a href="https://profiles.stanford.edu/scott-fendorf"> Scott Fendorf</a>. My research focuses on quantifying the impact of climate change on the fate of heavy metal(loid)s in soils and on crop quality and quantity. I use a combination of experimental/ field studies together with remote sensing imagery and statistical models.
 </p>
 </td></tr></table>
