--- a/courses.html
+++ b/courses.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
-<title>Publications</title>
+<title>Tianmei Wang</title>
 
 <!-- Google Analytics -->
 <script>
