--- a/publications.html
+++ b/publications.html
@@ -5,7 +5,7 @@
 
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
-<title>Publications</title>
+<title>Tianmei Wang</title>
 
 <!-- Google Analytics -->
 <script>
