--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 
 <h2>Journal Publications</h2>
 
-<p>1. Muehe, E. M.; <u>Wang, T.</u> ; Kerl, C. F.; Planer-Friedrich, B.;Fendorf, S. &ldquo;Rice Production Threatened by Coupled Stresses of Climate and Soil Arsenic. &rdquo; <i>Nat. Commun.</i> <b>2019 </b>, <i>10</i> (1): 1&ndash;10. [<a href="https://www.nature.com/articles/s41467-019-12946-4.pdf" target=&ldquo;blank&rdquo;>pdf</a>]
+<p>1. Muehe, E. M.; <u>Wang, T.</u> ; Kerl, C. F.; Planer-Friedrich, B.;Fendorf, S. &ldquo;Rice Production Threatened by Coupled Stresses of Climate and Soil Arsenic. &rdquo; <i>Nat. Commun.</i> <b>2019 </b>, <i>10</i> (1): 1&ndash;10. [<a href="https://www.nature.com/articles/s41467-019-12946-4.pdf" target=&ldquo;blank&rdquo;>pdf</a>] [<a href="https://www.youtube.com/watch?v=bau3X0dAocE" target=&ldquo;blank&rdquo;>video</a>]
 </p>
 
 </div>
