--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </td></tr></table>
 <h2>News</h2>
 <ul>
-<li><p> Personal website is up, hello world:)
+<li><p> I'll be presenting a talk at AGU titled "Unraveling the Impact of Climate Change and Soil Arsenic on Bangladeshi Rice Production" on Dec 14th.
 </p>
 </li>
 </ul>
