--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </td></tr></table>
 <h2>News</h2>
 <ul>
-<li><p> I'll be presenting a talk at AGU titled "Unraveling the Impact of Climate Change and Soil Arsenic on Bangladeshi Rice Production" on Dec 14th.
+<li><p> I'll be presenting a talk at AGU titled "Unraveling the Impact of Climate Change and Soil Arsenic on Bangladeshi Rice Production" on Dec 14th, 2022.
 </p>
 </li>
 </ul>
@@ -69,7 +69,7 @@
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. in Earth System Science, Stanford University, 2023 (expected) (advisor: <a href="https://profiles.stanford.edu/scott-fendorf" target=&ldquo;blank&rdquo;>Prof.&nbsp;Scott Fendorf</a>)
+<li><p>Ph.D. in Earth System Science, Stanford University, 2023 (advisor: <a href="https://profiles.stanford.edu/scott-fendorf" target=&ldquo;blank&rdquo;>Prof.&nbsp;Scott Fendorf</a>)
 </p>
 </li>
 <li><p>M.S. in Civil and Environmental Engineering, Stanford University, 2017
